plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.10'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.heony.flowteam'
version = '0.0.1-SNAPSHOT'
description = 'flowteam-enterprise-dev-recruitment-task'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

bootJar {
    archiveBaseName = 'flowteam-enterprise-dev-recruitment-task'
    archiveFileName = 'flowteam-enterprise-dev-recruitment-task.jar'
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // DB
    runtimeOnly 'com.h2database:h2'

    // swagger-ui
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // utils
    implementation 'org.apache.commons:commons-lang3:3.20.0' // object utils
    implementation 'org.jspecify:jspecify:1.0.0'    // null case runtime validation
    implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.1'  // for UUID v7
    implementation 'org.apache.tika:tika-core:3.2.3' // to validate mime type
    implementation 'org.apache.tika:tika-parsers:3.2.3' // to validate mime type


    // test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading' //Mockito의 동적 에이전트 로딩 경고 제거
}
